<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">重邮头条</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="left_drawer_no_login_tip">登录后，将推荐给你更多感兴趣的文章</string>
    <string name="left_drawer_item_search">搜索</string>
    <string name="left_drawer_item_favorite">喜爱</string>
    <string name="left_drawer_item_message">消息</string>
    <string name="left_drawer_offline">收藏</string>
    <string name="left_drawer_item_activity">关于应用</string>
    <string name="left_drawer_item_setting">设置</string>
    <string name="left_drawer_item_feedback">反馈</string>
    <string name="left_drawer_item_appstore">退出登陆</string>
    <string name="drawer_right_tip_no_login">未登录</string>
    <string name="action_night_mode">夜间模式</string>
    <string name="action_day_mode">日间模式</string>
    <string name="drawer_right_logout_hint_text">登陆后 可关注好友评论和收藏</string>
    <string name="favorite_btn_delete">删除</string>
    <string name="label_cancel_dislike">撤消</string>
    <string name="dislike_dlg_lable_speech">读文章</string>
    <string name="ss_pattern_update">发现%1$d条更新</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_list_mode">列表显示摘要</string>
    <string name="setting_font_size">字体大小可调</string>
    <string name="setting_list_comment">列表页评论</string>
    <string name="setting_refresh_list">列表页刷新</string>
    <string name="setting_load_image">省流量模式</string>
    <string name="setting_clear">自动清理缓存</string>
    <string name="setting_notify">推送通知</string>
    <string name="setting_interactive">互动插件</string>
    <string name="setting_use_swipe">左右翻页</string>
    <string name="setting_close_shake_hand">关闭摇一摇切换夜间模式</string>
    <string name="setting_share_when_favor">收藏时转发</string>
    <string name="setting_share_when_diggbury">顶踩时转发</string>
    <string name="setting_recommend">精彩应用推荐</string>
    <string name="setting_switch_domain">启动网络调试</string>
    <string name="setting_use_help">关于应用</string>
    <string name="setting_update">检查新版本</string>
    <string name="app_copyright">© 重邮新闻网   xwzx.cqupt.edu.cn</string>

</resources>