<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/left_drawer_item_bg_normal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="102dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/left_drawer_avatar_size"
                android:layout_height="@dimen/left_drawer_avatar_size"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="16dp"
                android:background="@color/white"
                android:padding="1dp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/left_drawer_user_name"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="34dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/login_img_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:src="@drawable/ic_drawer_weibo" />

            <ImageView
                android:id="@+id/login_img_userphoto"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_drawer_tencent"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/login_img_qzone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_drawer_qzone" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_tx_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:text="@string/left_drawer_no_login_tip"
            android:textColor="@color/left_drawer_no_login_tip_text"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView style="@style/left_drawer_item_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/pgc_btn"
                style="@style/left_drawer_item_layout"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/pgc_username"
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_pgc" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/search_btn"
                style="@style/left_drawer_item_layout"
                android:visibility="gone" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_search"
                    android:text="@string/left_drawer_item_search" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/favorite_btn"
                style="@style/left_drawer_item_layout"
                android:visibility="gone" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_favotite"
                    android:text="@string/left_drawer_item_favorite" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/message_btn"
                style="@style/left_drawer_item_layout"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/message_text"
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_message"
                    android:text="@string/left_drawer_item_message" />

                <TextView
                    android:id="@+id/top_message_count"
                    style="@style/left_drawer_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="6dp"
                    android:layout_toRightOf="@id/message_text"
                    android:background="@drawable/left__drawer_count_bg" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/offline_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/offline_btn"
                    style="@style/left_drawer_item_layout" >

                    <ImageView
                        android:id="@+id/offline_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="25dp"
                        android:background="@drawable/ic_drawer_offline" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/offline_icon"
                        android:minHeight="50dp" >

                        <TextView
                            android:id="@+id/offline_btn_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:text="@string/left_drawer_offline"
                            android:textColor="@drawable/left_drawer_item_text"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/offline_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/offline_btn_text"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/left_drawer_offline_hint"
                            android:textSize="7sp"
                            android:visibility="gone" />
                    </RelativeLayout>
                </RelativeLayout>

                <ImageView
                    android:id="@+id/offline_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/offline_btn"
                    android:src="@drawable/left_drawer_download"
                    android:visibility="gone" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/offline_divider"
                style="@style/left_drawer_item_line" />

            <LinearLayout
                android:id="@+id/app_activity_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/app_activity_btn"
                    style="@style/left_drawer_item_layout" >

                    <TextView
                        android:id="@+id/app_activity_text"
                        style="@style/left_drawer_item_text"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@drawable/left_drawer_activity_selector"
                        android:text="@string/left_drawer_item_activity" />

                    <TextView
                        android:id="@+id/top_appactivity_count"
                        style="@style/left_drawer_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="25.0dip"
                        android:layout_marginTop="6.0dip"
                        android:layout_toRightOf="@id/app_activity_text"
                        android:background="@drawable/left__drawer_count_bg" />
                </RelativeLayout>

                <ImageView style="@style/left_drawer_item_line" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/setting_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_setting"
                    android:text="@string/left_drawer_item_setting" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/feedback_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_feedback"
                    android:text="@string/left_drawer_item_feedback" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/appstore_btn"
                style="@style/left_drawer_item_layout"
                android:visibility="visible" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_appstore"
                    android:text="@string/left_drawer_item_appstore" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/appstore_line"
                style="@style/left_drawer_item_line" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:layout_marginLeft="19.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.ls.view.SwitchButton
            android:id="@+id/night_mode_btn"
            style="@style/Switch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true" />

        <!-- myapp:thumb="@drawable/wiper_switch_slipper_btn" -->
        <!-- myapp:track="@drawable/wiper_switch_btn" -->

        <TextView
            android:id="@+id/night_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:textColor="@color/left_drawer_night_mode_text"
            android:textSize="15.0sp" />
    </LinearLayout>

</LinearLayout>